add platform swagger annotation
